objects/EUR_CRM_Budget__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>Contract_Transaction_Total__c</fullName>
        <description>Signed total value of approved contract transaction</description>
        <label>Contract Transaction Total</label>
        <summarizedField>EUR_CRM_Budget_Transaction__c.EUR_CRM_Signed_Value__c</summarizedField>
        <summaryFilterItems>
            <field>EUR_CRM_Budget_Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>DE On Trade WKZ, iSpend</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>EUR_CRM_Budget_Transaction__c.EUR_CRM_Transaction_Category__c</field>
            <operation>equals</operation>
            <value>Contract Transaction, Spend Transaction</value>
        </summaryFilterItems>
        <summaryForeignKey>EUR_CRM_Budget_Transaction__c.EUR_CRM_Budget_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Budget__c</fullName>
        <formula>EUR_CRM_Allocated_Budget__c  + EUR_CRM_Carry_Forward__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Allocated_Budget__c</fullName>
        <label>Allocated Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Approved_Contract_Total__c</fullName>
        <formula>EUR_CRM_Contract_Refund_Total__c +  Contract_Transaction_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Contract Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Carry_Forward__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Carry Forward</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Refund_Total__c</fullName>
        <description>Signed total value of Contract Refund</description>
        <label>Contract Refund Total</label>
        <summarizedField>EUR_CRM_Budget_Transaction__c.EUR_CRM_Signed_Value__c</summarizedField>
        <summaryFilterItems>
            <field>EUR_CRM_Budget_Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>DE On Trade WKZ</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>EUR_CRM_Budget_Transaction__c.EUR_CRM_Transaction_Category__c</field>
            <operation>equals</operation>
            <value>Contract Refund</value>
        </summaryFilterItems>
        <summaryForeignKey>EUR_CRM_Budget_Transaction__c.EUR_CRM_Budget_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Credit_Summary__c</fullName>
        <label>Credit Summary</label>
        <summarizedField>EUR_CRM_Budget_Transaction__c.EUR_CRM_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>EUR_CRM_Budget_Transaction__c.EUR_CRM_Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Credit</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>EUR_CRM_Budget_Transaction__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>DE On Trade WKZ- Draft Transaction, iSpend - Draft Transaction</value>
        </summaryFilterItems>
        <summaryForeignKey>EUR_CRM_Budget_Transaction__c.EUR_CRM_Budget_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Current_Balance__c</fullName>
        <description>This equals  to Credit Summary - Debit Summary</description>
        <formula>EUR_CRM_Credit_Summary__c -  EUR_CRM_Debit_Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Debit_Summary__c</fullName>
        <label>Debit Summary</label>
        <summarizedField>EUR_CRM_Budget_Transaction__c.EUR_CRM_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>EUR_CRM_Budget_Transaction__c.EUR_CRM_Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Debit</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>EUR_CRM_Budget_Transaction__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>DE On Trade WKZ- Draft Transaction, EUR ZA On Trade Draft Transaction, iSpend - Draft Transaction</value>
        </summaryFilterItems>
        <summaryForeignKey>EUR_CRM_Budget_Transaction__c.EUR_CRM_Budget_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Draft_Transaction_Total__c</fullName>
        <description>Signed value total of Budget Transactions under DE On Trade WKZ Draft Transaction</description>
        <inlineHelpText>Total of budget draft transactions, which includes draft contract transactions</inlineHelpText>
        <label>Draft Transaction Total</label>
        <summarizedField>EUR_CRM_Budget_Transaction__c.EUR_CRM_Signed_Value__c</summarizedField>
        <summaryFilterItems>
            <field>EUR_CRM_Budget_Transaction__c.EUR_CRM_Transaction_Category__c</field>
            <operation>contains</operation>
            <value>Draft</value>
        </summaryFilterItems>
        <summaryForeignKey>EUR_CRM_Budget_Transaction__c.EUR_CRM_Budget_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Remaining_Balance__c</fullName>
        <description>This is the balance remaining after deducting Draft Transaction Total from the Current Balance</description>
        <formula>EUR_CRM_Current_Balance__c +  EUR_CRM_Draft_Transaction_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_User_Name__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_User_Role_Type__c</fullName>
        <label>User Role Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Representative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_User_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <label>Budget (EU)</label>
    <listViews>
        <fullName>All_DE_Budget</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Fiscal_Year__c</columns>
        <columns>EUR_CRM_Actual_Budget__c</columns>
        <columns>EUR_CRM_Allocated_Budget__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Budget__c.EUR_DE_On_Trade_WKZ</value>
        </filters>
        <label>All DE Budget</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ZA_Budget_FY16</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EUR_CRM_Current_Balance__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>EUR_CRM_Fiscal_Year__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Budget__c.EUR_ZA_On_Trade_Budget</value>
        </filters>
        <filters>
            <field>EUR_CRM_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY16</value>
        </filters>
        <label>All ZA Budget_FY16</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ZA_Budget_FY17</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EUR_CRM_Current_Balance__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>EUR_CRM_Fiscal_Year__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Budget__c.EUR_ZA_On_Trade_Budget</value>
        </filters>
        <filters>
            <field>EUR_CRM_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY17</value>
        </filters>
        <label>All ZA Budget FY17</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ZA_Budget_FY18</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EUR_CRM_Current_Balance__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>EUR_CRM_Fiscal_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Budget__c.EUR_ZA_On_Trade_Budget</value>
        </filters>
        <filters>
            <field>EUR_CRM_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY18</value>
        </filters>
        <label>All ZA Budget FY18</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_All_DE</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Fiscal_Year__c</columns>
        <columns>EUR_CRM_Allocated_Budget__c</columns>
        <columns>EUR_CRM_Actual_Budget__c</columns>
        <columns>EUR_CRM_Current_Balance__c</columns>
        <columns>EUR_CRM_Remaining_Balance__c</columns>
        <columns>EUR_CRM_Draft_Transaction_Total__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Budget__c.EUR_DE_On_Trade_WKZ</value>
        </filters>
        <label>All DE</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
            <role>EUR_DE</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BG-{000000}</displayFormat>
        <label>Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_On_Trade_WKZ</fullName>
        <active>true</active>
        <label>DE On Trade WKZ</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ISP_iSpend</fullName>
        <active>true</active>
        <label>iSpend</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_On_Trade_Budget</fullName>
        <active>true</active>
        <label>EUR ZA On Trade Budget</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>